[package]
name = "bevy_mod_reqwest"
description = "use reqwest with the bevy runtime in the same way on both web and native"
version = "0.13.0"
edition = "2021"
readme = "README.md"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
repository = "https://github.com/TotalKrill/bevy_mod_reqwest.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["default-tls", "json", "msgpack", "json"]
default-tls = ["reqwest/default-tls"]
json = ["reqwest/json", "serde_json"]
rustls-tls = ["reqwest/rustls-tls"]
msgpack = ["rmp-serde"]

[dependencies]
anyhow = "1.0.79"
bevy = { version = "0.12.0", default-features = false, features = ['multi-threaded']}
bevy_eventlistener = {git = "https://github.com/aevyrie/bevy_eventlistener.git"}
bytes = "=1.1.0"
futures-lite = "1.12.0"
reqwest = { version = "0.11.16", default-features = false }
rmp-serde = {version = "1.1.2", optional = true}
serde = { version = "1.0.159", features = ["derive"] }
serde_json = {version = "1.0.95", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
crossbeam-channel = "0.5.7"

[dev-dependencies]
bevy-inspector-egui = "0.21.0"
bevy = {version = "0.12.0", features = ["multi-threaded"]}

[target.'cfg(target_arch = "x86_64")'.dependencies]
async-compat = "0.2.1"
