[package]
name        = "bevy_mod_reqwest"
description = "Bevy http client using reqwest, with a focus on simple usage within the bevy runtime"
version     = "0.19.2"
edition     = "2021"
readme      = "README.md"
authors     = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
repository  = "https://github.com/TotalKrill/bevy_mod_reqwest.git"
license     = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default     = ["rustls-tls", "json", "log"]
default-tls = ["reqwest/default-tls"]
json        = ["reqwest/json", "serde_json"]
rustls-tls  = ["reqwest/rustls-tls"]
msgpack     = ["rmp-serde"]
log         = ["bevy/bevy_log"]

[dependencies]
reqwest        = { version = "0.12", default-features = false }
rmp-serde      = { version = "1.1.2", optional = true}
serde          = { version = "1.0.159", features = ["derive"] }
serde_json     = { version = "1", optional = true }

anyhow         = "1.0.79"
bytes          = "1.6.0"
futures-lite   = "2.3.0"

[dependencies.bevy]
version = "0.16"
# git = "https://github.com/bevyengine/bevy"
default-features = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
crossbeam-channel = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compat = "0.2"
